--- a/DataTable/DataTable.vcxproj.filters
+++ b/DataTable/DataTable.vcxproj.filters
@@ -64,6 +64,12 @@
     <ClCompile Include="ModifyStudent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LogWidget.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RegWidget.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="Student.h">
@@ -90,6 +96,12 @@
     <QtMoc Include="ModifyStudent.h">
       <Filter>Header Files</Filter>
     </QtMoc>
+    <QtMoc Include="LogWidget.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="RegWidget.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="MainWidgets.ui">
@@ -105,6 +117,12 @@
       <Filter>Form Files</Filter>
     </QtUic>
     <QtUic Include="ModifyStudent.ui">
+      <Filter>Form Files</Filter>
+    </QtUic>
+    <QtUic Include="LogWidget.ui">
+      <Filter>Form Files</Filter>
+    </QtUic>
+    <QtUic Include="RegWidget.ui">
       <Filter>Form Files</Filter>
     </QtUic>
   </ItemGroup>
