--- a/DataTable/DataTable.vcxproj.filters
+++ b/DataTable/DataTable.vcxproj.filters
@@ -70,6 +70,9 @@
     <ClCompile Include="RegWidget.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="IntegrityConstraint.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="Student.h">
@@ -100,6 +103,9 @@
       <Filter>Header Files</Filter>
     </QtMoc>
     <QtMoc Include="RegWidget.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="IntegrityConstraint.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
